@@ -40,8 +40,7 @@ response. The response is either decoded, printed out in ASCII
 hexadecimal or sent as binary to stdout.<br>
 <br>
 At the lower levels SAS is a point to point interconnect (like SATA).
-SAS has devices called expanders which have a similar role as switches
-do
+SAS has devices called expanders which have a similar role to switches
 in the Fibre Channel protocol and Ethernet. The primary role of SMP is
 to monitor and control SAS expanders. Most SAS Host Bus Adapters (HBAs)
 contain a SMP initiator through which SMP requests are sent and
@@ -52,12 +51,12 @@ transporting SCSI command sets to SAS devices (e.g. SAS disks and tape
 drives) , and STP for tunnelling the ATA command set to SATA disks. and
 S-ATAPI devices.<br>
 <br>
-SAS is a rapidly expanding new technology which already has three
+SAS is a relatively new technology which already has three
 generations. The first two generations are approved standards: the
 original SAS (SAS
 ANSI INCITS 376-2003) and SAS 1.1 (INCITS 417-2006). New technical work
 is going into SAS-2 and at the time of
-writing the most recent draft is sas2r07.pdf (see section 10.4.3 for
+writing the most recent draft is sas2r13.pdf (see section 10.4.3 for
 SMP functions). Drafts, including those
 just prior to standardization can be found at the <a
  href="http://www.t10.org">www.t10.org</a>
@@ -68,7 +67,7 @@ defined in the Small Form Factor document SFF-8485 found at <a
 The
 <span style="font-weight: bold;">smp_utils</span> package targets the
 linux kernel 2.4 and 2.6 series. Preliminary work has been done in
-version 0.92 to support FreeBSD and it should be reasonably easy to
+version 0.93 to support FreeBSD and it should be reasonably easy to
 port
 this package to other operating systems.<br>
 <br>
@@ -148,6 +147,13 @@ able to read the sideband signals on a HBA's wide internal cables.<br>
       </td>
     </tr>
     <tr>
+      <td style="vertical-align: top;">smp_rep_exp_route_tbl<br>
+      </td>
+      <td style="vertical-align: top;">REPORT EXPANDER ROUTE TABLE LIST<br>
+      </td>
+      <td style="vertical-align: top;">added in smp_utils version 0.93</td>
+    </tr>
+    <tr>
       <td style="vertical-align: top;">smp_rep_general<br>
       </td>
       <td style="vertical-align: top;">REPORT GENERAL<br>
@@ -211,12 +217,22 @@ request response protocol with each request and response limited
 currently to 1032 bytes in length (including a 4 byte CRC at the end of
 each request and response).<br>
 <br>
-This package currently supports two interfaces: one based on the MPT
-Fusion <span style="font-family: monospace;">/dev/mptctl</span> device
-and the other based on a read write attribute
-in sysfs called <span style="font-family: monospace;">smp_portal</span>.<br>
+This package currently supports three interfaces: <br>
+<ul>
+  <li><span style="font-weight: bold;">mpt</span>: based on the MPT
+Fusion <span style="font-family: monospace;">/dev/mptctl</span> device</li>
+  <li><span style="font-weight: bold;">sgv4</span>: (also <span
+ style="font-weight: bold;">sg</span>) uses the SCSI generic version 4
+interface and the SAS transport layer (available from linux kernel
+2.6.24)</li>
+  <li><span style="font-weight: bold;">tpl</span>: (also <span
+ style="font-weight: bold;">ai</span>) based on a read write attribute
+in sysfs called <span style="font-family: monospace;">smp_portal</span>.
+Luben Tuikov's aic94xx driver implements this.<br>
+  </li>
+</ul>
 <br>
-The mptctl
+The mpt
 interface uses a single device node per system and thus needs a
 "ioc_num" to identify
 which HBA on the system it is going to send the SMP request.&nbsp; The
@@ -239,15 +255,30 @@ associated with the mptctl module. Hence a "<span
 required. The <span style="font-family: monospace;">/dev/mptctl</span>
 device node is a character device with major 10 and minor 220.<br>
 <br>
-The <span style="font-family: monospace;">smp_portal</span> interface
+The sgv4 interfaces uses the SG_IO ioctl, the bsg driver and the SCSI
+generic version 4 (hence "sgv4" which can be shortened to "sg")
+structure. From linux kernel 2.6.24 the SAS transport layer within the
+SCSI subsystem accepts SMP requests and forwards them on to those SAS
+low level (HBA) drivers that accept them. At this time the LSI MPT SAS
+Fusion driver accepts SMP requests issued via this interface. The SMP
+target device is identified in one of two possible ways: via a sysfs
+directory name (e.g. <span style="font-family: monospace;">/sys/class/bsg/expander-4:0</span>
+) or via a device node created dynamically by the bsg driver (e.g. <span
+ style="font-family: monospace;">/dev/expander-4:0</span> ). The SMP
+target device SAS address is implicit (and this design makes this
+interface useless for user space SAS topology discovery).<br>
+<br>
+The tpl interface&nbsp; uses the sysfs <span
+ style="font-family: monospace;">smp_portal</span> attribute which
 is part of the topological representation of a
-SAS domain in the sysfs file system (only found in the lk 2.6 series).
+SAS domain (only found in the lk 2.6 series).
 SAS devices that identify themselves (during the discover process) as
 an SMP target receive a smp_portal attribute. Hence the SMP target SAS
 address is implicit in a <span style="font-family: monospace;">smp_portal</span>
 attribute. In the linux 2.6 series a sysfs search like this "<span
  style="font-family: monospace;">find /sys -name smp_portal</span>"
-will help in finding the interface file.<br>
+will help in finding the interface file. An alternate aic94xx driver
+uses this interface.<br>
 <br>
 Each utility attempts to work out at run time which interface it has.
 While there are only two interfaces this is a reasonably simple
@@ -496,7 +527,7 @@ messages will take some time to be displaced).<br>
 <br>
 <span style="font-family: monospace;"># sg_vpd --page=di_port --quiet
 /dev/sdc<br>
-0x5000c500005208ee<br>
+0x5000c500005208ee,1<br>
 </span><span style="font-family: monospace;"></span><br
  style="font-family: monospace;">
 <span style="font-family: monospace;"># smp_discover --phy=2 --brief<br>
@@ -656,7 +687,7 @@ the link and select "Save link as ..." to download the file.<br>
 <br>
 <p>Return to <a href="index.html">main</a> page. </p>
 <center>
-<p>Last updated: 20th September 2007<br>
+<p>Last updated: 10th December 2007<br>
 <br>
 </p>
 </center>
